syntax = "proto3";

package moneytransfer;

option go_package = "github.com/tunvx/simplebank/grpc/pb/moneytransfer";

message CheckAccountRequest {
    string account_number = 1;
    string currency_type = 2;
}

message CheckAccountResponse {
    bool   is_valid = 1;
    string owner_name = 2;
}