syntax = "proto3";

package transaction;

import "manage/account/account.proto";

option go_package = "github.com/tunvx/simplebank/grpc/pb/transactions";

message FastInternalTransferRequest {
    int64 amount = 1;
    string sender_acc_number = 2;
    string recipient_bank_code = 3;
    string recipient_acc_number = 4;
    string recipient_name = 5;
    string currency_type = 6;
    string message = 7;
}

message FastInternalTransferResponse {
    account.Account sender_account = 1;
    account.Account recipient_account = 2;
}